Truffle deploy process rewritten, new tests added. Package file updated, standard script tasks added. .gitignore updated.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
+.idea
+
 dist/bundle.js
-package-lock.json
 *.swp
 *.swo
-node_modules/
 .DS_Store
+
+node_modules/
 /coverage
+/build
+
+package-lock.json
+npm-debug.log
