--- a/package.json
+++ b/package.json
@@ -1,56 +1,41 @@
 {
-  "name": "skeleton",
-  "version": "0.1.5",
-  "description": "Skeleton dapp",
-  "main": "webpack.config.js",
-  "dependencies": {
-    "babel-core": "^6.26.0",
-    "bignumber.js": "^4.0.2",
-    "oo7": "^0.5.4",
-    "oo7-parity": "^0.6.8",
-    "oo7-react": "^0.4.5",
-    "parity-reactive-ui": "^0.4.12",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
-  },
-  "devDependencies": {
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-stage-2": "^6.18.0",
-    "babel-preset-stage-3": "^6.17.0",
-    "babel-register": "^6.23.0",
-    "chai": "^4.0.2",
-    "chai-as-promised": "^7.0.0",
-    "chai-bignumber": "^2.0.0",
-    "coveralls": "^2.13.1",
-    "ethereumjs-testrpc": "^4.1.1",
-    "mocha-lcov-reporter": "^1.3.0",
-    "solidity-coverage": "^0.2.2",
-    "truffle": "^3.4.6",
-    "truffle-hdwallet-provider": "0.0.3"
-  },
+  "name": "leagion-dal-smart-contracts",
+  "version": "0.0.2",
+  "description": "The leagiON DAL smart contracts",
   "scripts": {
-    "test": "scripts/test.sh",
-    "coverage": "scripts/coverage.sh",
-    "build": "webpack --progress --colors --watch",
-    "start": "webpack-dev-server --content-base dist"
+    "compile": "truffle compile",
+    "deploy": "truffle migrate --reset",
+    "test": "truffle test",
+    "testrpc":"testrpc --account=\"0x2bdd21761a483f71054e14f5b827213567971c676928d9a1808cbfa4b7501200,1000000000000000000000000\" --account=\"0x2bdd21761a483f71054e14f5b827213567971c676928d9a1808cbfa4b7501201,1000000000000000000000000\" --account=\"0x2bdd21761a483f71054e14f5b827213567971c676928d9a1808cbfa4b7501202,1000000000000000000000000\" --port 8545"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ethcore/skeleton.git"
+    "url": "git+https://github.com/leagiONteam/truffle.git"
   },
   "keywords": [
+    "leagiON",
+    "DAL",
     "Dapp",
-    "Parity",
-    "Reactive",
-    "Template"
+    "Truffle"
   ],
-  "author": "Parity Technologies Ltd",
+  "author": "leagiON team",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/ethcore/skeleton/issues"
+    "url": "https://github.com/leagiONteam/truffle/issues"
   },
-  "homepage": "https://github.com/ethcore/skeleton#readme"
+  "homepage": "https://github.com/leagiONteam/truffle",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^2.0.1",
+    "ethereumjs-testrpc": "^4.1.3",
+    "ethereumjs-util": "^5.1.2",
+    "truffle": "^3.4.9"
+  }
 }
